@@ -1,3 +1,12 @@
+2013-11-12  Martin Jambor  <mjambor@suse.cz>
+
+	PR rtl-optimization/10474
+	* ira.c (interesting_dest_for_shprep): New function.
+	(split_live_ranges_for_shrink_wrap): Likewise.
+	(find_moveable_pseudos): Move calculation of dominance info,
+	df_analysios and the final anlyses to...
+	(ira): ...here, call split_live_ranges_for_shrink_wrap.
+
 2013-11-12  Bin Cheng  <bin.cheng@arm.com>
 
 	* tree-ssa-loop-ivopts.c (force_expr_to_var_cost): Refactor the code.
